# rust-otel

./: Cargo.toml  LICENSE
.github/workflows/: rust.yml
src/: main.rs
