[package]
name = "rust-otel"
version = "0.1.0"
edition = "2024"

[dependencies]
http-body = "1.0.1"
http-body-util = "0.1.3"
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
opentelemetry = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = "0.31.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
